<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigationView">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home"/>

        <item
            android:id="@+id/nav_favorite"
            android:title="@string/nav_favorite"
            android:icon="@drawable/ic_favorite"/>

        <item
            android:id="@+id/nav_history"
            android:title="@string/nav_history"
            android:icon="@drawable/ic_history"/>
    </group>

    <item android:title="@string/nav_account">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:title="@string/nav_profile"
                android:icon="@drawable/ic_person"/>
            <item
                android:id="@+id/nav_changePassword"
                android:title="@string/nav_changePassword"
                android:icon="@drawable/ic_lock"/>
            <item
                android:id="@+id/nav_pricing"
                android:title="@string/nav_pricing"
                android:icon="@drawable/ic_upgrade"/>
        </menu>
    </item>

    <item android:title="@string/nav_communication">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/nav_share"
                android:icon="@drawable/ic_share"/>
            <item
                android:id="@+id/nav_rate"
                android:title="@string/nav_rate"
                android:icon="@drawable/ic_rate_review"/>
        </menu>
    </item>

    <item
        android:id="@+id/nav_logout"
        android:title="@string/nav_logout"
        android:icon="@drawable/logout">
    </item>
</menu>