<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/pink_3"
    tools:context=".AddCourseActivity">

    <EditText
        android:id="@+id/courseTitleEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:hint="@string/tieu_de_khoa_hoc"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey" />

    <EditText
        android:id="@+id/totalVideoEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/courseTitleEt"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white"
        android:hint="@string/so_luong_bai_hoc"
        android:inputType="number"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:textCursorDrawable="@null" />

    <Spinner
        android:id="@+id/courseSpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/totalVideoEt"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white" />

    <androidx.cardview.widget.CardView
        android:id="@+id/proceedCartView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/courseSpinner"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="12dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_shade_1"
            android:padding="20dp">

            <TextView
                android:id="@+id/createdTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/tiep_tuc"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>