<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    tools:context=".UserRegister">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="190dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <View
            android:layout_width="4dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/dang_ky"
            android:textAllCaps="true"
            android:textColor="@color/grey"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/design1" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:orientation="vertical"
                android:weightSum="4">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="0dp">

                    <EditText
                        android:id="@+id/emailEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:drawableStart="@drawable/ic_person_outline"
                        android:drawablePadding="6dp"
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="20dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/colorView" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="0dp"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/passwordEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="6dp"
                        android:ems="10"
                        android:hint="@string/mat_khau"
                        android:inputType="textPassword"
                        android:padding="20dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/colorView" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="0dp"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/confirmPasswordEt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="6dp"
                        android:ems="10"
                        android:hint="@string/nhap_lai_mat_khau"
                        android:inputType="textPassword"
                        android:padding="20dp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/co_tai_khoan"
                android:textSize="20sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/logBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="230dp"
                android:src="@drawable/log_btn" />
        </LinearLayout>

        <ImageView
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="163dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="300dp"
            android:src="@drawable/btn1" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/design3"
        android:layout_alignParentBottom="true"
        android:scaleType="fitXY"/>

</RelativeLayout>